infrastructure/apps/media-server/sonarr/sonarr-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-svc
  namespace: media
spec:
  selector:
    app: sonarr
  ports:
  - port: 80
    targetPort: 8989
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: sonarr.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr-svc
            port:
              number: 80
